<resources>
    <string name="app_name">假WQ定位追踪监测系统</string>
    <string name="menu_item_config">配置</string>
    <string name="menu_item_support">系统维护</string>
    <string name="menu_item_help">帮助选项</string>
    <string name="menu_item_config_cmntway">通信方式设置</string>
    <string name="menu_item_config_params">参数配置</string>
    <string name="menu_item_config_flash">频闪控制</string>
    <string name="menu_item_support_targeted">系统自检</string>
    <string name="card_mainpage">主页</string>
    <string name="menu_item_start">开始</string>
    <string name="menu_item_quit">退出</string>
    <string name="param_content1">加速度值判断</string>
    <string name="param_content2">出水时间</string>
    <string name="param_content3">姿态判定时间间隔</string>
    <string name="param_title">参数配置</string>
    <string name="strobe_control_title">频闪控制</string>
    <string name="strobe_control_warn">频闪</string>
    <string name="strobe_flash_times">闪烁次数</string>
    <string name="strobe_flash_time_length">闪烁时长</string>
    <string name="strobe_flash_break">闪烁间隔</string>
    <string name="strobe_control_on">开启</string>
    <string name="strobe_control_off">关闭</string>
    <string name="param_send_config">发送</string>
    <string name="interval_config">发送</string>
    <string name="card_main_selfcheck">系统自检</string>
    <string name="card_main_position">追踪监测</string>
    <string name="cmnt_way">通信方式</string>
    <string name="card_cmnt_bd">北斗通信</string>
    <string name="card_cmnt_dt">电台通信</string>
    <string name="card_dialog_alert">是否确认修改通信方式？</string>
    <string name="card_dialog_exit">是否退出？</string>
    <string name="card_dialog_alert_Y">确认</string>
    <string name="card_dialog_alert_N">取消</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rest_a">设备A</string>
    <string name="rest_b">设备B</string>
    <string name="saved_high_score_key">TestKey</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="chooseDevice">选择设备</string>
    <string name="second">(s)</string>
    <string name="timesCalc">(次/分钟)</string>
    <string name="cmnt_param_interval">通信方式发送间隔</string>
    <string name="dt_cmnt_param_interval">电台发送间隔</string>
    <string name="bd_cmnt_param_interval">北斗发送间隔</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="devopsTitle">设备号与北斗卡号匹配</string>
    <string name="devopsConfirm">配置完成</string>
    <string name="devopsAdd">+</string>
    <string name="devopsCard">卡号</string>
    <string name="devopsDevice">设备号</string>
    <string name="devopsCmntway">预设通信方式</string>
    <string name="bd_timer">北斗发送倒计时:</string>
    <string name="self_check_label">系统自检</string>
    <string name="self_check_btn">开始</string>
    <string name="self_check_result">系统自检结果：</string>
    <string name="sys_sleep">系统休眠</string>
    <string name="heading_back">返回</string>
</resources>