<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/menu_item_config_cmntway"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:padding="15dip"
                android:layout_margin="3dip"
                android:background="#ffcccccc"
                android:text="@string/menu_item_config_cmntway"
                android:textColor="#000" />
            <Button
                android:id="@+id/menu_item_config_params"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="15dip"
                android:layout_margin="3dip"
                android:background="#ffcccccc"
                android:text="@string/menu_item_config_params"
                android:textColor="#000" />
            <Button
                android:id="@+id/menu_item_config_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="15dip"
                android:layout_margin="3dip"
                android:background="#ffcccccc"
                android:text="@string/menu_item_config_flash"
                android:textColor="#000" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>