<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StrobeControlFragment">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:padding="15dip"
            android:layout_height="match_parent"
            android:text="@string/strobe_control_title"
            android:textFontWeight="1000"
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="#000"
            />
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_margin="0.5dip"
            android:background="#ffcccccc"
            android:orientation="horizontal">
            <TableRow
                android:layout_weight=".7"
                android:layout_height="match_parent"
                >
                <TextView
                    android:padding="15dip"
                    android:textColor="#000"
                    android:gravity="right"
                    android:layout_height="match_parent"
                    android:text="@string/strobe_control_warn"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <RadioGroup
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/strobe_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/strobe_control_on"/>
                    <RadioButton
                        android:id="@+id/strobe_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strobe_control_off"/>
                </RadioGroup>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="15dip"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:text="@string/param_send_config"
                android:textColor="#fff"
                android:background="#f00"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_margin="0.5dip"
            android:background="#ffcccccc"
            android:orientation="horizontal">
            <TableRow
                android:layout_weight=".7"
                android:layout_height="match_parent"
                >
                <TextView
                    android:padding="15dip"
                    android:textColor="#000"
                    android:gravity="right"
                    android:layout_height="match_parent"
                    android:text="@string/strobe_flash_times"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="60dip"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|left"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:text="7"
                    />
                <TextView android:text="(次)" android:textColor="#000"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_margin="0.5dip"
            android:background="#ffcccccc"
            android:orientation="horizontal">
            <TableRow
                android:layout_weight=".7"
                android:layout_height="match_parent"
                >
                <TextView
                    android:padding="15dip"
                    android:textColor="#000"
                    android:gravity="right"
                    android:layout_height="match_parent"
                    android:text="@string/strobe_flash_time_length"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="60dip"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|left"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:text="2"
                    />
                <TextView android:text="(s)" android:textColor="#000"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_margin="0.5dip"
            android:background="#ffcccccc"
            android:orientation="horizontal">
            <TableRow
                android:layout_weight=".7"
                android:layout_height="match_parent"
                >
                <TextView
                    android:padding="15dip"
                    android:textColor="#000"
                    android:gravity="right"
                    android:layout_height="match_parent"
                    android:text="@string/strobe_flash_break"
                    />
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="match_parent"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="60dip"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|left"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:text="60"
                    />
                <TextView android:text="(s)" android:textColor="#000"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:text="@string/param_send_config"
                android:textColor="#fff"
                android:background="#f00"
                />
        </TableRow>
    </TableLayout>

</FrameLayout>