<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homefragments.TrackMonitorFragment">

    <!--中间部分-->
    <RelativeLayout
        android:id="@+id/relativeLayoutCenter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="NotSibling">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_weight=".7">

                    <TextView
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:padding="15dip"
                        android:text="@string/self_check_label"
                        android:textColor="#000"
                        android:textFontWeight="1000"
                        android:textSize="35sp" />
                </TableRow>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="20dip"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/syscheck"
                    android:enabled="false"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/self_check_btn"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_weight=".7">

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="15dip"
                    android:textColor="#000"
                    android:text="@string/self_check_result"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/selfcheck_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical" />
    </RelativeLayout>
</RelativeLayout>
